project's private subnets as a map
